# roomcomm

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  SKILL.md  agents.md  build_skill.sh  llms.txt  nginx-commroom.conf  requirements.txt  roomcomm.py
app/: database.py  i18n.py  llm.py  main.py  mcp_server.py  models.py  notify.py  pcis.py  schemas.py
app/templates/: admin.html  index.html  mcp_hint.html  room.html  room_agent.md  rooms.html
cdto-skill/: SKILL.md
deploy/: nginx-commroom.conf
mcp/: README.md  pyproject.toml  server.py
scripts/: gen_og_image.py
skill/: SKILL.md  agents.md  llms.txt
skill/scripts/: roomcomm.py
static/: favicon-preview.html  i18n.js  style.css
tests/: test_api.py
